# nes_emu

./: CMakeLists.txt  README.md  main.c
nes/: cartridge.c  cartridge.h  controller.c  controller.h  cpu.c  cpu.h  memory.c  memory.h  memory_controller.c  memory_controller.h  nes.h  ppu.c  ppu.h
tests/cpu/: nes_emu_generate_trace.sh  nes_emu_reg_states.txt  nintendulator_generate_nestest_trace.sh  nintendulator_reg_states.txt
